plugins {
  id 'org.springframework.boot' version '2.7.1'
  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
  id 'java'
  id 'eclipse'
}

group = 'com.synopsis.evaluacion'
version = '1.0'
sourceCompatibility = '11'

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

ext {
  set('springCloudVersion', "2021.0.3")
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.cloud:spring-cloud-starter-config'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
  runtimeOnly 'org.postgresql:postgresql'
  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

dependencyManagement {
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
  }
}

task copyToLib( type: Copy ) {
    into "$buildDir/libs/libs"
    from configurations.implementation
}

project.configurations.implementation.setCanBeResolved(true)

jar{
    manifest {
        attributes(
                "Main-Class": "ws.synopsis.clients.ApiClientApplication",                
                "Class-Path":  configurations.runtimeClasspath.files.collect { 'libs/' + it.name }.join(' ')              
        )
    }
    dependsOn ('copyToLib')
}

tasks.named('test') {
  useJUnitPlatform()
}